[package]
name = "ruspiro-channel"
version = "0.1.0"
authors = ["2ndTaleStudio <pspwizard@gmx.de>"]
edition = "2018"
description = """
Bare Metal Channel implementations for `no-std` environments, only requiring an 
allocator to be provided.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RusPiRo/ruspiro-channel/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-channel/||VERSION||"
categories = ["no-std", "embedded"]
keywords = ["ruspiro", "channel"]
exclude = [".travis.yml", "Makefile.toml"]

[lib]

[dependencies]
rlibc = "=1.0.0"
ruspiro-arch-aarch64 = "0.1"
futures-util = { version = "0.3", default-features = false, optional = true }

[features]
async = ["futures-util"]
