[package]
name = "ruspiro-channel"
version = "0.1.1"
authors = ["2ndTaleStudio <pspwizard@gmx.de>"]
edition = "2018"
description = """
Bare Metal Channel implementations for `no-std` environments, only requiring an 
allocator to be provided.
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RusPiRo/ruspiro-channel/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-channel/||VERSION||"
categories = ["no-std", "embedded", "async"]
keywords = ["ruspiro", "channel", "async", "raspberrypi"]
exclude = ["Makefile.toml", ".cargo/config.toml"]

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-arch-aarch64 = "~0.1.4"
futures-util = { version = "~0.3.14", default-features = false, optional = true }

[features]
async = ["futures-util"]

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-gnu"
features = ["async"]
